WIP add some part of submit and cancel functionality